# ai-notebook

./: .gitignore  EXPORT_FEATURE.md  README.md  package.json
.cargo/: config.toml
docs/: architecture.md  roadmap.md
public/: debug-log.html
server/: .gitignore  Cargo.toml  README.md  build.bat  build.sh  config.toml
server/src/: main.rs
src/: App.vue  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  mail.rs  notes.rs  writing.rs
src/components/ai/: AINoteEditModal.vue  AIProviderModal.vue
src/components/common/: TextContextMenu.vue  VditorEditor.vue
src/components/image-host/: ImageHostModal.vue
src/components/mail/: MailAccountModal.vue  MailAccountSettingsModal.vue  MailComposerModal.vue
src/components/notes/: BackupHistoryModal.vue  NoteAlertDialog.vue  NoteTreeItem.vue
src/components/writing/: WritingMaterialModal.vue  WritingOutlineDialog.vue  WritingPublishDialog.vue
src/layouts/: AppShell.vue
src/pages/debug/: DebugLogsPage.vue
src/pages/mail/: MailPage.vue
src/pages/notes/: NotesPage.vue  NotesPage_new_style.css
src/pages/settings/: SettingsPage.vue
src/pages/writing/: WritingPage.vue
src/router/: index.ts
src/services/: ai.ts  debug-window.ts  debug.ts  image-host.ts  mail.ts  note.ts  writing.ts
src/stores/: mail.ts  notes.ts
src/types/: ai.ts  debug.ts  image-host.ts  mail.ts  note.ts  writing.ts
